[package]
name = "my-tray-app"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A headless system-tray daemon with an Axum HTTP control panel, a TCP listener and a local SQLite store."

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tray-icon = "0.24"
rusqlite = { version = "0.32", features = ["bundled"] }
image = { version = "0.25", features = ["png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# tray-icon's Linux backend is GTK3 based. We disable the default `libxdo`
# feature (only needed to re-focus a window on click) so the Linux CI image
# does not need the extra `libxdo` system library.
[target.'cfg(target_os = "linux")'.dependencies.tray-icon]
version = "0.24"
default-features = false
features = ["gtk"]

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

# Windows/macOS run a headless `winit` event loop (no window) to pump tray-icon
# menu events. Linux uses GTK's own loop instead.
[target.'cfg(not(target_os = "linux"))'.dependencies]
winit = "0.30"

[profile.release]
opt-level = 3
lto = true
